--- a/sitesketch/src/main/resources/application.properties
+++ b/sitesketch/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.ai.openai.chat.options.model=nvidia/llama-3.3-nemotron-super-49b:free
 spring.ai.openai.chat.options.temperature=0.7
 logging.level.org.springframework.web.client=DEBUG
 logging.level.com.doftec.sitesketch=DEBUG
+
+spring.data.mongodb.uri=mongodb+srv://technoai59:cOVjhSN1mgdMyCHX@sitesketch.pt8hjy7.mongodb.net/sitesketch?retryWrites=true&w=majority&appName=SiteSketch
+spring.data.mongodb.auto-index-creation=true
