--- a/sitesketch/src/main/resources/application.properties
+++ b/sitesketch/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.data.mongodb.uri=mongodb+srv://technoai59:cOVjhSN1mgdMyCHX@sitesketch.pt8
 spring.data.mongodb.auto-index-creation=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=technoai59@gmail.com
-spring.mail.password=your-app-password
+spring.mail.username=khanaaliyashamim786@gmail.com
+spring.mail.password=oihwirlexwekbhak
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
