Added netlify deploy functionality

--- a/sitesketch/src/main/resources/application.properties
+++ b/sitesketch/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.ai.openai.chat.options.model=nvidia/llama-3.3-nemotron-super-49b:free
 spring.ai.openai.chat.options.temperature=0.7
 logging.level.org.springframework.web.client=DEBUG
 logging.level.com.doftec.sitesketch=DEBUG
+aws.bucket=your-s3-bucket-name
+
+netlify.api-token=nfp_e4FFWd5CpnrgyfL7oVf8cGk5abgEutQ93ece
 
 spring.data.mongodb.uri=mongodb+srv://technoai59:cOVjhSN1mgdMyCHX@sitesketch.pt8hjy7.mongodb.net/sitesketch?retryWrites=true&w=majority&appName=SiteSketch
 spring.data.mongodb.auto-index-creation=true
